[package]
name = "repeat"
version = "0.0.6"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.27"
anyhow = "1.0.100"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" , "sqlite", "chrono"] }
directories = "6.0.0"
tokio = { version = "1", features = ["full"] }
blake3 = "1.8.2"
chrono = {version="0.4.42", features=["serde"]}
futures = "0.3.31"
